		 Modified code to retrieve improper dihedral parameters
		 Allow force field atom type file in dir_s, dir_x, dir_u and dir_t
Apr 20 1998	 Consolidate par and typ files
		 Corrections in improper dihedral center determination
Apr 21 1998	 Coordinates in nm
		 List missing parameters only once
		 Read coordinates from rtdb
		 Add pre_hnames
		 Call to scf and esp to get charges in pre_charge
Apr 22 1998	 Driver routines for restart generation
Apr 23 1998	 Fix several errors
		 Center solute routine
	         Write restart routine
		 Read geometry object routine
Apr 28 1998      Add remaining options
Apr 29 1998      Bug fixes and Id's in all files
		 No constraints in esp when intergal molecule
		 Make sgm format identical to previous format
		 Apply amber improper format to sgm file
		 Make current directory ffield_t if not specified
Apr 30 1998	 Report missing impropers for amber in correct order
May 01 1998	 Fix bug for pdb starting with residue number larger than 1
	         Properly deallocate heap memory
		 Correction handling single atom first molecule
May 05 1998	 Minor changes and bug fixes
May 15 1998	 Bug fix in declaration
Jun 03 1998      Change pre_namamb to pre_rename
	         No partial charge estimation if atom types unresolved
		 Bug fix in atom type string comparison in pre_ffield
Jun 04 1998      Bug fix in atom typing (pre_atype)
		 Charge determination separate for each segment (pre_charge)
		 Charge constraint of zero on set of cap atoms (pre_charge)
		 Handle charmm improper dihedrals (pre_ffield)
		 List atoms not found (pre_misfit)
	         Rename residues (CYS,HIS) appropriately for force field
 	         Bug fix in index to array cseq (pre_rename)
Jun 05 1998	 Bug fix in residue renaming (pre_rename)
Jun 08 1998	 Compliance with util_print
Jun 09 1998	 Avoid geom_rtdb_load error message
Jun 11 1998	 Add topology modification commands
		 Fix bugs in reading solvent from pdb file
		 Keep name file